fix: Corrige nome e link do PD EAD

--- a/perfil.html
+++ b/perfil.html
@@ -60,7 +60,7 @@
                         <h6 class="dropdown-header">Sistemas</h6>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="https://talentos.pdcase.com/">PD Case EAD</a>
+                        <a class="dropdown-item" href="https://talentos.pdcase.com/ead/">PD EAD</a>
                     </li>
                 </ul>
             </div>
@@ -84,7 +84,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body m-0 p-0"><!-- opções de sistemas -->
-                        <a class="dropdown-item " href="https://talentos.pdcase.com/">PD Case EAD</a>
+                        <a class="dropdown-item" href="https://talentos.pdcase.com/ead/">PD EAD</a>
                     </div>
                 </div>
             </div>
