porjetos individuais finalizados

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="perfil-caio.html"
+                    <a href="paginas-caio/perfil-caio.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
