--- a/paginas-caio/projetos/projeto-barbearia.html
+++ b/paginas-caio/projetos/projeto-barbearia.html
@@ -13,14 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Vollkorn:wght@700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <!-- cabeçalho -->
     <header class="d-flex flex-row align-items-center justify-content-between m-0">
         <!-- logo -->
-        <a href="index.html">
+        <a href="../../index.html">
             <!-- logo aparece somente no desktop -->
             <img src="/imagens/logo/logo-desktop.png" id="logo-desktop"
                 alt="Logo da PD Vitrine: a letra P com gradiente branco e amarelo, a letra D também em gradiente branco e amarelo, e abaixo a palavra 'Vitrine' em branco."
@@ -151,11 +151,30 @@
     </header>
     <!-- fim cabeçalho -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Botão voltar página de Perfil -->
     <div class="pd-projeto-botao-voltar">
-        <a href="perfil.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
-            <img src="imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
-            <span>PD Vitrine</span>
+        <a href="../perfil-caio.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
+            <img src="/imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
+            <span>FSW Barbearia</span>
         </a>
     </div>
     <main class="container-fluid py-3 px-4 main-projeto">
@@ -172,29 +191,39 @@
                 <div class="project-info-sidebar">
                     <section class="project-card">
                         <h3>Descrição</h3>
-                        <p>PD Vitrine, a porta de entrada para um ecossistema de talentos. Descubra os perfis e projetos
-                            de nossos desenvolvedores mais promissores, um local onde o conhecimento ganha visibilidade
-                            e propósito, formando talentos prontos para as demandas do mercado de tecnologia.</p>
+                        <p>O projeto da Barbearia foi um site fictício desenvolvido para fins estudantis, com
+                            o objetivo de aprimorar habilidades em HTML e CSS, especialmente no que diz respeito
+                            à responsividade. A proposta foi criar uma página moderna para uma barbearia, com
+                            seções voltadas para agendamentos, serviços e profissionais.
+
+                            Todo o design e a estrutura foram feitos manualmente, aplicando técnicas de media
+                            queries e layout flexível para garantir uma boa experiência tanto em computadores
+                            quanto em dispositivos móveis.
+
+                            O projeto serviu como um exercício prático importante para consolidar
+                            o domínio de estruturação e estilização de sites, com foco em adaptação
+                            visual, organização de conteúdo e usabilidade.</p>
                     </section>
 
                     <section class="project-card">
                         <h3>Badges</h3>
                         <div class="badges-container">
-                            <img src="imagens/badges/Figma.svg" alt="Badge Figma" class="badge-item">
-                            <img src="imagens/badges/HTML.svg" alt="Badge HTML" class="badge-item">
-                            <img src="imagens/badges/CSS.svg" alt="Badge CSS" class="badge-item">
-                            <img src="imagens/badges/Javascript.svg" alt="Badge JavaScript" class="badge-item">
-                            <img src="imagens/badges/Git.svg" alt="Badge Git" class="badge-item">
-                            <img src="imagens/badges/Github.svg" alt="Badge GitHub" class="badge-item">
-                            <img src="imagens/badges/Gitlab.svg" alt="Badge GitLab" class="badge-item">
+                            <img src="/imagens/badges/Figma.svg" alt="Badge Figma" class="badge-item">
+                            <img src="/imagens/badges/HTML.svg" alt="Badge HTML" class="badge-item">
+                            <img src="/imagens/badges/CSS.svg" alt="Badge CSS" class="badge-item">
+                            
+                            
+
+
                         </div>
                     </section>
 
                     <section class="project-card">
                         <h3>Links</h3>
                         <div class="projects-links-container">
-                            <a href="https://homologacao-pd-vitrine.vercel.app/" class="btn btn-project">Aplicação</a>
-                            <a href="https://github.com/L0pe5/homologacao-pd-vitrine"
+                            <a href="https://barbearia-shop-caio.vercel.app/paginadeinicio.html"
+                                class="btn btn-project">Aplicação</a>
+                            <a href="https://github.com/caiomartins8/Barbearia-Shop-Caio"
                                 class="btn btn-project">Repositório</a>
                         </div>
                     </section>
@@ -202,38 +231,12 @@
                     <section class="project-card">
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
+
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Tiago Martins</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Julio Pereira</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Matheus Lopes</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Caio Caldeira</span>
                             </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Emanuel Bravo</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Geovanna Alves</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Joao Tavares</span>
-                            </li>
-                            <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Leonardo Maciel</span>
-                            </li>
+
                         </ul>
                     </section>
                 </div>
@@ -259,14 +262,14 @@
 
     <script>
         const projectImages = [
-            'imagens/projetos/vitrine (4).png',
-            'imagens/projetos/vitrine (5).png',
-            'imagens/projetos/vitrine (1).png',
-            'imagens/projetos/vitrine (3).png',
-            'imagens/projetos/vitrine (2).png',
-            'imagens/projetos/vitrine (6).png',
-            'imagens/projetos/vitrine (7).png',
-            'imagens/projetos/vitrine (8).png'
+            '../../imagens/projetos/projetos-caio/barbaria-caio/image1.png',
+            '../../imagens/projetos/projetos-caio/barbaria-caio/image2.png',
+            '../../imagens/projetos/projetos-caio/barbaria-caio/image3.png',
+            '../../imagens/projetos/projetos-caio/barbaria-caio/image4.png',
+            '../../imagens/projetos/projetos-caio/barbaria-caio/image.png',
+
+
+
 
         ];
     </script>
@@ -275,7 +278,7 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-    <script src="js/projeto.js"></script>
+    <script src="/js/projeto.js"></script>
 </body>
 
 </html>
