feat: páginas emanuel

--- a/index.html
+++ b/index.html
@@ -476,6 +476,71 @@
                     </a>
                 </div>
             </article>
+
+
+            <!-- card perfil Emanuel -->
+            <article
+                class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
+                <!-- retangulo amarelo e img perfil -->
+                <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
+                    <!-- foto perfil -->
+                    <figure class="m-0">
+                        <img src="./imagens/fotos-de-perfil/emanuel.jpg" alt="foto padrão"
+                            class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
+                        <figcaption>Foto padrão</figcaption>
+                    </figure>
+                </div>
+                <!-- seção conteudo -->
+                <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
+                    <!-- identificação -->
+                    <div class=" d-flex flex-column justify-content-evenly align-items-center">
+                        <h2 class="card-index__nome text-capitalize m-0 p-0">Emanuel Bravo</h2>
+                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
+                            de
+                            Sites e
+                            Sistemas Web | Automação</p>
+                    </div>
+                    <!-- badges -->
+                    <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
+                        <!-- html, css, javascript, figma, docker, bootstrap, java, python, postgresql, sqlite -->
+                        <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
+                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
+                        <img src="./imagens/badges/Figma.svg" alt="Figma" class="card-index__badges">
+                        <img src="./imagens/badges/Docker.svg" alt="Docker" class="card-index__badges">
+                        <img src="./imagens/badges/Bootstrap.svg" alt="Bootstrap" class="card-index__badges">
+                        <img src="./imagens/badges/JAVA.svg" alt="JAVA" class="card-index__badges">
+                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/PostgreSQL.svg" alt="PostgreSQL" class="card-index__badges">
+                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                    </div>
+                    <!-- seção responsaveis tec. e supervisor -->
+                    <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
+                        <!-- responsavel -->
+                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
+                            <img src="./imagens/icones/Responsável Tecnico.svg" alt="responsável técnico"
+                                class="card-index__icones">
+                            <div>
+                                <h2 class="fw-bold">Responsável técnico:</h2>
+                                <p>Matheus Lopes</p>
+                            </div>
+                        </div>
+                        <!-- supervisor -->
+                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
+                            <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
+                            <div>
+                                <h2 class="fw-bold">Supervisor:</h2>
+                                <p>Tiago Martins</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- botão ver mais -->
+                    <a href="/paginas-emanuel/perfil.html"
+                        class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
+                        Ver Perfil
+                    </a>
+                </div>
+            </article>
         </section>
 
     </main>
