--- a/perfil.html
+++ b/perfil.html
@@ -178,7 +178,7 @@
                 </div>
                 <button class="baixar-curriculo">
                     <p class="baixar-curriculo-texto font-raleway fw-bold texto-abraco">Baixar Currículo</p>
-                    <img src="imagens/icones/download.svg">
+                    <img src="/imagens/icones/download.svg">
                 </button>
                 <div class="icons-sociais">
                     <a href="#"><img class="icon-social" src="imagens/icones/teams.png"></a>
