fix: comenta projeto não finalizado

--- a/paginas-emanuel/perfil.html
+++ b/paginas-emanuel/perfil.html
@@ -840,7 +840,7 @@
                     </div>
                 </div>
 
-                <div class="card-tela-perfil">
+                <!-- <div class="card-tela-perfil">
                     <figure class="figure-card-tela-perfil">
                         <img src="/imagens/projetos/imdb-api/imdb-api.png" alt="" class="img-card-tela-perfil">
                         <figcaption>foto de perfil</figcaption>
@@ -864,7 +864,7 @@
                             <button class="btn-ver-mais">Ver Mais</button>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
