feat: projeto imdb-api

--- a/paginas-emanuel/perfil.html
+++ b/paginas-emanuel/perfil.html
@@ -610,7 +610,7 @@
 
                     <div class="badges">
 
-                        <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/mysql.svg" alt="">
+                        <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/MySQL.svg" alt="">
                             <figcaption></figcaption>
                         </figure>
 
@@ -640,7 +640,7 @@
 
                     <div class="badges">
 
-                        <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/react.svg" alt="">
+                        <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/React.svg" alt="">
                             <figcaption></figcaption>
                         </figure>
 
@@ -840,7 +840,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="card-tela-perfil">
+                <div class="card-tela-perfil">
                     <figure class="figure-card-tela-perfil">
                         <img src="/imagens/projetos/imdb-api/imdb-api.png" alt="" class="img-card-tela-perfil">
                         <figcaption>foto de perfil</figcaption>
@@ -864,7 +864,7 @@
                             <button class="btn-ver-mais">Ver Mais</button>
                         </a>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
