--- a/projetos-compartilhados/imdb-api.html
+++ b/projetos-compartilhados/imdb-api.html
@@ -153,7 +153,7 @@
 
     <!-- Botão voltar página de Perfil -->
     <div class="pd-projeto-botao-voltar">
-        <a href="/p/emanuel/perfil.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
+        <a href="/index.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
             <img src="/imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
             <span>IMDb API</span>
         </a>
@@ -189,8 +189,8 @@
                     <section class="project-card">
                         <h3>Links</h3>
                         <div class="projects-links-container">
-                            <a href="https://barbearia-shop-git-main-bravomanels-projects.vercel.app/index.html" class="btn btn-project">Aplicação</a>
-                            <a href="https://github.com/bravomanel/barbearia_shop"
+                            <a href="https://pd-filmes.vercel.app/" class="btn btn-project">Aplicação</a>
+                            <a href="https://github.com/LeonardoChiariMaciel/pd-filmes"
                                 class="btn btn-project">Repositório</a>
                         </div>
                     </section>
@@ -198,6 +198,10 @@
                     <section class="project-card">
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
+                            <li class="collaborator-item">
+                                <img src="/imagens/fotos-de-perfil/leonardomaciel.svg" alt="Ícone de usuário" class="profile-pic">
+                                <span class="collaborator-name">Leonardo Maciel</span>
+                            </li>
                             <li class="collaborator-item">
                                 <img src="/imagens/fotos-de-perfil/emanuel.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Emanuel Bravo</span>
@@ -227,13 +231,8 @@
 
     <script>
         const projectImages = [
-            '/imagens/projetos/emanuel/barber/5.png',
-            '/imagens/projetos/emanuel/barber/6.png',
-            '/imagens/projetos/emanuel/barber/7.png',
-            '/imagens/projetos/emanuel/barber/1.png',
-            '/imagens/projetos/emanuel/barber/2.png',
-            '/imagens/projetos/emanuel/barber/3.png',
-            '/imagens/projetos/emanuel/barber/4.png',
+            '/imagens/projetos/imdb-api/1.png',
+            '/imagens/projetos/imdb-api/2.png',
 
         ];
     </script>
