--- a/paginas-caio/perfil-caio.html
+++ b/paginas-caio/perfil-caio.html
@@ -649,7 +649,7 @@
                             <img src="/imagens/badges-mobile/HTML.svg" alt="HTML">
                         </div>
 
-                        <a href="/projeto.html" class="link-ver-mais">
+                        <a href="/projetos-compartilhados/faz-bem-caio-joao/projeto-faz-bem.html" class="link-ver-mais">
                             <button class="btn-ver-mais">Ver Mais</button>
                         </a>
                     </div>
@@ -674,7 +674,7 @@
                             <img src="/imagens/badges-mobile/Bootstrap.svg" alt="Python">
                         </div>
 
-                        <a href="/projeto.html" class="link-ver-mais">
+                        <a href="/projeto_pd_ead.html" class="link-ver-mais">
                             <button class="btn-ver-mais">Ver Mais</button>
                         </a>
                     </div>
@@ -689,8 +689,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="/js/index.js"></script>
-    <script src="/js/perfil.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/perfil.js"></script>
 </body>
 
 </html>
