card , perfil e projetos caio

--- a/index.html
+++ b/index.html
@@ -414,40 +414,38 @@
                 </div>
             </article>
 
-            <!-- card perfil -->
+             <!-- card perfil -->
             <article
                 class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
                 <!-- retangulo amarelo e img perfil -->
                 <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
                     <!-- foto perfil -->
                     <figure class="m-0">
-                        <img src="./imagens/icones/Foto.svg" alt="foto padrão"
+                        <img src="imagens/fotos-de-perfil/foto-perfil-caio.jpg" alt="foto padrão"
                             class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
-                        <figcaption>Foto padrão</figcaption>
+                        <figcaption>Foto Caio</figcaption>
                     </figure>
                 </div>
                 <!-- seção conteudo -->
                 <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
                     <!-- identificação -->
                     <div class=" d-flex flex-column justify-content-evenly align-items-center">
-                        <h2 class="card-index__nome text-capitalize m-0 p-0">Nome Sobrenome</h2>
-                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
+                        <h2 class="card-index__nome text-capitalize m-0 p-0">Caio Martins</h2>
+                        <p class="card-index__descricao text-center lh-sm m-0 p-0"> Estudante | Criação
                             de
                             Sites e
-                            Sistemas Web | Automação</p>
+                            Sistemas Web | The Best Cotemig 2024</p>
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/badges/Rust.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/Scrum.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/HTML.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/CSS.png" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/Figma.svg" alt="HTML" class="card-index__badges">
+                        <img src="./imagens/badges/React.svg" alt="python" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/PHP.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/Go.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/JAVA.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/PHP.svg" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/Bootstrap.svg" alt="HTML" class="card-index__badges">
+                        <img src="./imagens/badges/Javascript.svg" alt="python" class="card-index__badges">
                     </div>
                     <!-- seção responsaveis tec. e supervisor -->
                     <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
@@ -457,7 +455,7 @@
                                 class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Responsável técnico:</h2>
-                                <p>Nome Sobrenome</p>
+                                <p>Matheus Lopes</p>
                             </div>
                         </div>
                         <!-- supervisor -->
@@ -465,12 +463,12 @@
                             <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Supervisor:</h2>
-                                <p>Nome Sobrenome</p>
+                                <p>Tiago Martins</p>
                             </div>
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="/perfil.html"
+                    <a href="paginas-caio/perfil-caio.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
