--- a/paginas-caio/perfil-caio.html
+++ b/paginas-caio/perfil-caio.html
@@ -690,8 +690,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
-    <script src="js/perfil.js"></script>
+            
+      <script src="/js/index.js"></script>
+    <script src="/js/perfil.js"></script>
 </body>
 
 </html>
