--- a/paginas-caio/projetos/projeto-apresentacao.html
+++ b/paginas-caio/projetos/projeto-apresentacao.html
@@ -274,7 +274,7 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-    <script src="/js/projeto.js"></script>
-</body>
+ <script src="/js/index.js"></script>
+    <script src="/js/perfil.js"></script></body>
 
 </html>
