--- a/paginas-caio/projetos/projeto-barbearia.html
+++ b/paginas-caio/projetos/projeto-barbearia.html
@@ -260,7 +260,7 @@
         </div>
     </div>
 
-    <script>
+   <script>
         const projectImages = [
             '../../imagens/projetos/projetos-caio/barbaria-caio/image1.png',
             '../../imagens/projetos/projetos-caio/barbaria-caio/image2.png',
@@ -268,6 +268,8 @@
             '../../imagens/projetos/projetos-caio/barbaria-caio/image4.png',
             '../../imagens/projetos/projetos-caio/barbaria-caio/image.png',
 
+           
+           
 
 
 
@@ -277,8 +279,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-
-    <script src="/js/projeto.js"></script>
+ <script src="/js/index.js"></script>
+    <script src="/js/perfil.js"></script>
 </body>
 
 </html>
