--- a/paginas-caio/projetos/projeto-apresentacao.html
+++ b/paginas-caio/projetos/projeto-apresentacao.html
@@ -260,21 +260,18 @@
         </div>
     </div>
 
+   
     <script>
-        const projectImages = [
-            '../../imagens/projetos/projetos-caio/apresentacao-card/image.png',
-           
-
-
-
-        ];
-    </script>
+const projectImages = [
+  "../../imagens/projetos/projetos-caio/apresentacao-card/image.png",
+  
+];
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
- <script src="/js/index.js"></script>
-    <script src="/js/perfil.js"></script></body>
+    <script src="/js/projeto.js"></script>
 
 </html>
