--- a/paginas-caio/projetos/projeto-barbearia.html
+++ b/paginas-caio/projetos/projeto-barbearia.html
@@ -261,26 +261,22 @@
     </div>
 
    <script>
-        const projectImages = [
-            '../../imagens/projetos/projetos-caio/barbaria-caio/image1.png',
-            '../../imagens/projetos/projetos-caio/barbaria-caio/image2.png',
-            '../../imagens/projetos/projetos-caio/barbaria-caio/image3.png',
-            '../../imagens/projetos/projetos-caio/barbaria-caio/image4.png',
-            '../../imagens/projetos/projetos-caio/barbaria-caio/image.png',
-
-           
-           
+const projectImages = [
+    "../../imagens/projetos/projetos-caio/barbaria-caio/image1.png",
+    "../../imagens/projetos/projetos-caio/barbaria-caio/image.png",
+    "../../imagens/projetos/projetos-caio/barbaria-caio/image2.png",
+    "../../imagens/projetos/projetos-caio/barbaria-caio/image3.png",
+    "../../imagens/projetos/projetos-caio/barbaria-caio/image4.png",
 
 
-
-        ];
-    </script>
+  ,
+];
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
- <script src="/js/index.js"></script>
-    <script src="/js/perfil.js"></script>
-</body>
+
+    <script src="/js/projeto.js"></script>
 
 </html>
