--- a/paginas-caio/projetos/projeto-chaveirices.html
+++ b/paginas-caio/projetos/projeto-chaveirices.html
@@ -282,7 +282,6 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
- <script src="/js/index.js"></script>
-    <script src="/js/perfil.js"></script></body>
+    <script src="/js/projeto.js"></script>
 
 </html>
