--- a/paginas-caio/projetos/projeto-pd-coffe.html
+++ b/paginas-caio/projetos/projeto-pd-coffe.html
@@ -279,7 +279,7 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
- <script src="/js/index.js"></script>
-    <script src="/js/perfil.js"></script></body>
+    <script src="/js/projeto.js"></script>
+</body>
 
 </html>
