card , perfil e projetos caio

--- a/paginas-caio/projetos/projeto-barbearia.html
+++ b/paginas-caio/projetos/projeto-barbearia.html
@@ -233,7 +233,7 @@
                         <ul class="list-unstyled collaborators-list">
 
                             <li class="collaborator-item">
-                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/fotos-de-perfil/foto-perfil-caio.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Caio Caldeira</span>
                             </li>
 
@@ -278,5 +278,7 @@ const projectImages = [
         crossorigin="anonymous"></script>
 
     <script src="/js/projeto.js"></script>
+     <script src="/js/index.js"></script>
+    <script src="/js/perfil.js"></script>
 
 </html>
