--- a/projetos-compartilhados/projeto-faz-bem.html
+++ b/projetos-compartilhados/projeto-faz-bem.html
@@ -236,12 +236,12 @@
                         <ul class="list-unstyled collaborators-list">
 
                             <li class="collaborator-item">
-                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/fotos-de-perfil/foto-perfil-caio.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Caio Caldeira</span>
                             </li>
 
                              <li class="collaborator-item">
-                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/fotos-de-perfil/joaotavares.png alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">João Tavares</span>
                             </li>
 
