--- a/paginas-caio/projetos/projeto-apresentacao.html
+++ b/paginas-caio/projetos/projeto-apresentacao.html
@@ -232,8 +232,8 @@
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
 
-                            <li class="collaborator-item">
-                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                           <li class="collaborator-item">
+                                <img src="/imagens/fotos-de-perfil/foto-perfil-caio.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Caio Caldeira</span>
                             </li>
 
@@ -273,5 +273,7 @@ const projectImages = [
         crossorigin="anonymous"></script>
 
     <script src="/js/projeto.js"></script>
+     <script src="/js/index.js"></script>
+    <script src="/js/perfil.js"></script>
 
 </html>
